force-app/main/default/objects/Production__c/fields/IMDb_URL__c.field-meta.xml
<CustomField>
    <fullName>IMDb_URL__c</fullName>
    <description>URL to Production IMDb page.</description>
    <label>IMDb URL</label>
    <type>Url</type>
</CustomField>