force-app/main/default/objects/Production__c/fields/IsVisible__c.field-meta.xml
<CustomField>
    <fullName>IsVisible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsVisible</label>
    <type>Checkbox</type>
</CustomField>