force-app/main/default/objects/Production__c/fields/Number_of_Episodes__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Episodes__c</fullName>
    <label>Number_of_Episodes</label>
    <summaryForeignKey>Episode__c.TV_Show__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>