force-app/main/default/objects/Production__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>The year the Production was created or released.</description>
    <inlineHelpText>The calendar year that this production was originally released.</inlineHelpText>
    <label>Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>