force-app/main/default/objects/Production__c/recordTypes/Movie.recordType-meta.xml
<RecordType>
    <fullName>Movie</fullName>
    <active>true</active>
    <description>For movie productions.</description>
    <label>Movie</label>
</RecordType>