force-app/main/default/objects/Production__c/recordTypes/TV_Show.recordType-meta.xml
<RecordType>
    <fullName>TV_Show</fullName>
    <active>true</active>
    <description>TV Show Production</description>
    <label>TV Show</label>
</RecordType>