force-app/main/default/objects/Production__c/recordTypes/Video_Games.recordType-meta.xml
<RecordType>
    <fullName>Video_Games</fullName>
    <active>true</active>
    <description>For video game productions.</description>
    <label>Video Games</label>
</RecordType>